--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -31,7 +31,7 @@
                         </ul>
                     </div>
                 </span>
-                <span> <a href="/blogs"> Blog </a> </span>
+                <span> <a href="#"> Blog </a> </span>
                 <span> <a href="/apply-for-job">Apply for Job</a> </span>
                 <span> <a href="/complaint/all">Complaints</a> </span>
                 <!-- <span>About Us</span>
