--- a/templates/views/admin/complaints/complaints.hbs
+++ b/templates/views/admin/complaints/complaints.hbs
@@ -52,7 +52,7 @@
         </div>
         <div class="col-md-4 d-flex justify-content-end align-items-center">
             <h6 class="mt-2 me-2">Refresh Complaints</h6> &nbsp;
-            <i class="bi bi-arrow-repeat refresh-complaints rotate-360 fa-5x" onclick="getAllComplaints()"
+            <i class="bi bi-arrow-repeat refresh-complaints rotate-360 fa-1x" onclick="getAllComplaints()"
                 style="transition: all 0.3s ease-in-out;"></i>
         </div>
     </div>
@@ -96,9 +96,7 @@
             <div class="col my-3 mb-md-5 mb-3 d-flex justify-content-between">
                 <h3>Complaint Details</h3>
                 <div class="d-flex align-items-center">
-                    <img src="/images/letters/alt.png" height="30em" width="53em" class="mx-2 d-lg-inline d-none">
-                    <i class="bi bi-plus-lg d-lg-inline d-none"></i>
-                    <img src="/images/letters/a.png" alt="" height="30em" width="30em" class="mx-2 d-lg-inline d-none">
+                    <span class="d-flex align-items-center mx-2">( ESC )</span>
                     <i class="bi bi-x-circle close-complaint-details-btn" style="cursor: pointer;font-size:1.5em"
                         onclick="checkclass();$('.complaint-details-modal').toggleClass('active');$('.actions-dialog-box-container').removeClass('open');"></i>
                 </div>
