--- a/templates/views/admin/salesData/parts/allSalesPart.hbs
+++ b/templates/views/admin/salesData/parts/allSalesPart.hbs
@@ -47,7 +47,8 @@
 
 {{#*inline "body"}}
 <script>
-    window.scrollTo(0, 0)
+    window.scrollTo(0, 0);
+    $('.menu-link[ data-link="sales-data"] #sales-data-navbar-item').html("Sales (P)")
 </script>
 
 
