--- a/templates/views/admin/salesData/salesData.hbs
+++ b/templates/views/admin/salesData/salesData.hbs
@@ -23,12 +23,32 @@
         visibility: visible;
         opacity: 1;
     }
+
+    #print-results-table.active {
+        visibility: hidden;
+        opacity: 0;
+        position: absolute;
+
+    }
+
+    #print-results-table table,
+    #print-results-table td,
+    #print-results-table th {
+        border: 1px solid #595959;
+        border-collapse: collapse;
+    }
+
+    #print-results-table td,
+    #print-results-table th {
+        padding: 0.5em 1em;
+    }
 </style>
 {{/inline}}
 
 {{#*inline "body"}}
 <script>
     window.scrollTo(0, 0)
+    $('.menu-link[ data-link="sales-data"] #sales-data-navbar-item').html("Sales (M)")
 </script>
 {{!-- PRINT SEARCH RESULTS --}}
 <div class="print-results-table" id="print-results-table" style="display: none;">
@@ -163,6 +183,7 @@
                     <i class="bi bi-plus-lg d-lg-inline d-none"></i>
                     <img src="/images/letters/a.png" alt="" height="30em" width="30em" class="mx-2 d-lg-inline d-none">
                 </span> --}}
+                <span class="d-flex align-items-center mx-2">( ESC ) </span>
                 <i class="bi bi-x-circle cursor-pointer" style="font-size:1.5em"
                     onclick="$('.view-sale-data-details-modal').removeClass('active');$('html').css('overflow', 'auto');"></i>
             </div>
