--- a/templates/views/admin/serviceReports/serviceReport.hbs
+++ b/templates/views/admin/serviceReports/serviceReport.hbs
@@ -161,9 +161,7 @@
         <h3 class="service-report-heading">Service Report</h3>
       </div>
       <div class="col-md-4 col-2 my-4 d-flex justify-content-end">
-        <img src="/images/letters/alt.png" alt="" height="30em" width="53em" class="mx-2 d-lg-inline d-none">
-        <i class="bi bi-plus-lg d-lg-inline d-none"></i>
-        <img src="/images/letters/a.png" alt="" height="30em" width="30em" class="mx-2 d-lg-inline d-none">
+        <span class="d-flex align-items-center mx-2">( ESC )</span>
         <i class="bi bi-x-circle cursor-pointer" style="font-size:1.5em" onclick="closeReport()"></i>
       </div>
     </div>
