--- a/public/css/admin/vouchers/delivery-order/view-all.css
+++ b/public/css/admin/vouchers/delivery-order/view-all.css
@@ -36,7 +36,9 @@
     .delivery-order-table table {
         border: 0;
     }
-
+    .delivery-order-table table td {
+        padding: 0.5em 0;
+    }
     .delivery-order-table table caption {
         font-size: 1.3em;
     }
@@ -53,7 +55,6 @@
     }
 
     .delivery-order-table table tr {
-        border-bottom: 3px solid #ddd;
         display: block;
         margin-bottom: .625em;
     }
@@ -66,8 +67,8 @@
     .delivery-order-table table td:nth-child(1),
     .delivery-order-table table td:nth-child(3),
     .delivery-order-table table td:nth-child(4),
-    .delivery-order-table table td:nth-child(6) {
-        border-bottom: 1px solid #ddd;
+    .delivery-order-table table td:nth-child(6), 
+        .delivery-order-table table td:nth-child(7) {
         display: block;
         font-size: .8em;
         text-align: right;
@@ -79,7 +80,9 @@
         font-size: .8em;
         text-align: right;
     } */
-
+    /* #all-delivery-voucher-tbody > tr > td:nth-child(7){
+        display: none;
+    } */
     .delivery-order-table table td::before {
         /*
           aria-label has no advantage, it won't be read inside a table
@@ -113,16 +116,21 @@
 }
 
 .voucher-details-container {
-    height: 100.7vh;
-    width: 100.7%;
+    height: 100vh;
+    width: calc(100vw - 16.7em);
     background-color: #fff;
-    position: absolute;
-    top: -5em;
-    left: -0.5em;
+    position: fixed;
+    top: 0;
+    right: 0;
     z-index: 999;
     overflow-y: auto;
 }
-
+@media (max-width:1200px) {
+    .voucher-details-container {
+        height: 100vh;
+        width: 100vw;
+    }
+}
 .page-title {
     position: relative;
     left: -1.2em;
