--- a/templates/views/admin/salesData/parts/addNewSalesPart.hbs
+++ b/templates/views/admin/salesData/parts/addNewSalesPart.hbs
@@ -35,7 +35,9 @@
     }
 </style>
 {{/inline}}
-
+<script>
+    $('.menu-link[ data-link="sales-data"] #sales-data-navbar-item').html("Sales (P)")
+</script>
 <div class="container px-md-4 ">
     <div class="row mt-md-4 mt-3">
         <div class="col-12">
