--- a/templates/views/admin/vouchers/delivery-order/view-all.hbs
+++ b/templates/views/admin/vouchers/delivery-order/view-all.hbs
@@ -1,11 +1,5 @@
 {{>adminHeader}}
 {{#*inline "css"}}
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <link rel="stylesheet" href="/css/admin/vouchers/delivery-order/view-all.css">
 {{/inline}}
 {{#*inline "body"}}
@@ -13,18 +7,20 @@
     <span class="py-2 px-4 display-6 page-title border-radius-right d-md-inline d-none">Delivery Order</span>
     <span class="py-2 px-4 page-right-title border-radius-left">
         <ul class="nav nav-pills">
-            <li class="nav-item px-1 user-select-none " onclick="filterVouchers('admin')">
+            <li class="nav-item px-1 user-select-none "
+                onclick="dataNum = 20;gotAllVouchers = false;filterVouchers('admin',0,20)">
                 <a class="nav-link my-voucher-pill active px-2 cursor-pointer bg-base-color-nav" data-toggle="pill"
                     role="tab" aria-selected="true">My vouchers</a>
             </li>
-            <li class="nav-item px-1 user-select-none " onclick="filterVouchers('all')">
+            <li class="nav-item px-1 user-select-none "
+                onclick="dataNum = 20;gotAllVouchers = false;filterVouchers('all',0,20)">
                 <a class="nav-link px-2 all-voucher-pill cursor-pointer bg-base-color-nav" data-toggle="pill" role="tab"
                     aria-selected="false">All vouchers</a>
             </li>
         </ul>
     </span>
     <div class="row delivery-order-table">
-        <div class="col mt-5 pt-4">
+        <div class="col mt-5 pt-4 mb-5 pb-5">
             <h2 class='text-secondary text-center mt-5 hide error'></h2>
             <table>
                 <thead>
@@ -60,6 +56,10 @@
                     <span class="sr-only">Loading...</span>
                 </div>
                 <h5 class="mt-1">Loading please wait...</h5>
+            </div>
+            <div class="container text-center mt-5 got-all-data hide">
+                <h5 class="mt-1 d-flex justify-content-center align-items-center"><i
+                        class="bi bi-check-circle text-success mx-1" style="font-size: 36px;"></i>Got all vouchers</h5>
             </div>
         </div>
     </div>
@@ -218,8 +218,10 @@
             </div>
         </div>
         <div class="row">
-            <h5 class="view-details-divider advance-payment-heading mt-4" style="background-color: #f7f8fa;">Advance
-                Payments</h5>
+            <div class="col-12">
+                <h5 class="view-details-divider advance-payment-heading mt-4" style="background-color: #f7f8fa;">Advance
+                    Payments</h5>
+            </div>
             {{!-- <div class="col-md-5 advance-payment-container">
                 <h6 class="my-3">Mode of payment : <span class="badge badge-primary px-2 mode-of-payment">Bank</span>
                 </h6>
@@ -248,7 +250,7 @@
                     </div>
                 </div>
             </div> --}}
-            <div class="col advance-payment-container mb-5 pb-5">
+            <div class="col-12 advance-payment-container mb-5 pb-5">
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
@@ -269,7 +271,10 @@
             </div>
         </div>
         <div class="row dispatch-details-container hide d-none" style="margin-bottom: 10em;">
-            <h5 class="view-details-divider" style="background-color: #f7f8fa;">Dispatch Details</h5>
+
+            <div class="col-12">
+                <h5 class="view-details-divider" style="background-color: #f7f8fa;">Dispatch Details</h5>
+            </div>
             <div class="col-md-5">
                 <div class="form-group">
                     <div class="my-3">
@@ -332,13 +337,23 @@
         </div>
         <div class="submit-container d-flex justify-content-end ps-3 align-items-center"
             style="position: fixed;bottom:1em;right:1em;">
+            {{#each admin.permissions}}
+            {{#ifeq this.permissionName "deliveryOrderVoucher"}}
+            {{#each this.permissionKeys}}
+            {{#ifeq this.keyName "edit"}}
             <button data-toggle="modal" data-target="#dispatchDOmodal"
                 class="btn bg-danger text-light mx-2 shadow dispatch-btn" type="button"><i
                     class="bi bi-truck mx-2"></i>Dispatch</button>
+            {{/ifeq}}
+            {{/each}}
+            {{/ifeq}}
+            {{/each}}
+            <a href="" class="btn bg-text-base-color print-report-btn" data-toggle="tooltip" data-placement="top"
+                title="Print" target="_blank"><i class="bi bi-printer"></i></a>
             <button onclick="closeVoucherDetails()" class="btn bg-base-color text-light mx-2 shadow"
-                type="button">Close</button>
+                data-toggle="tooltip" data-placement="top" title="Close ( esc )" type="button"><i
+                    class="bi bi-x-lg"></i></button>
         </div>
-
     </div>
 </div>
 
@@ -395,8 +410,7 @@
 
 <div class="fixed-container d-flex justify-content-end ps-3 align-items-center"
     style="position: fixed;bottom:1em;right:1em;">
-    <button class="btn bg-base-color text-light shadow-none mx-2" type="button"
-        onclick="searchInput.val('');checkFilters()">
+    <button class="btn bg-base-color text-light shadow-none mx-2" type="button" onclick="refreshVouchers()">
         <i class="bi bi-arrow-clockwise"></i>
     </button>
     <button class="btn bg-base-color text-light p-1 px-2 shadow-none"
@@ -408,6 +422,13 @@
 {{/inline}}
 {{#*inline "script"}}
 <script>
+    keyboardJS.bind('alt + =', (e) => {
+        e.preventDefault()
+        window.location.replace("/vitco-impex/vouchers/delivery-order/new")
+    });
+    $(function () {
+        $('[data-toggle="tooltip"]').tooltip()
+    })
     function ObjectId() { }
     vouchers = [{{{ vouchers }}}]
 </script>
